--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Ignore png files but just in the root
+/*.png
