--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,9 +19,11 @@ jobs:
       id: zip
       run: |
         mkdir -p publish/Custom/Scripts/LFE/LightTexture
+        mkdir -p publish/Custom/Scripts/LFE/LightTexture/Overlays
         mkdir -p publish/Custom/Atom/InvisibleLight/Textures
         cp LightTexture.cs publish/Custom/Scripts/LFE/LightTexture/
         cp textures/*.png publish/Custom/Atom/InvisibleLight/Textures/
+        cp Overlays/*.png publish/Custom/Scripts/LFE/LightTexture/Overlays/
         cp vam/meta.json publish/
         sed -i 's/v0.0.0/${{ steps.get_version.outputs.VERSION }}/' publish/meta.json
         cd publish
